# hyperspot

./: Cargo.toml
.github/workflows/: ci.yml
apps/hyperspot-server/: Cargo.toml
apps/hyperspot-server/src/: main.rs  registered_modules.rs
docs/: MODKIT_UNIFIED_SYSTEM.md
grpc-stubs/directory-grpc-stubs/: Cargo.toml  build.rs
grpc-stubs/directory-grpc-stubs/src/: lib.rs
libs/modkit/: Cargo.toml
libs/modkit-bootstrap/: Cargo.toml
libs/modkit-bootstrap/src/: config.rs  config_provider.rs  lib.rs  logging.rs  signals.rs
libs/modkit-bootstrap/src/config/: tests.rs  tracing_tests.rs
libs/modkit-bootstrap/src/paths/: home_dir.rs  mod.rs
libs/modkit-macros/: Cargo.toml  README.md
libs/modkit-macros/src/: generate_clients.rs  grpc_client.rs  lib.rs  utils.rs
libs/modkit-macros/tests/: generate_clients_test.rs  grpc_client_transport_tests.rs  securityctx_tests.rs  ui.rs  validation_tests.rs
libs/modkit-macros/tests/ui/fail/: caps_not_array.rs  caps_not_array.stderr  client_not_trait_path.rs  client_not_trait_path.stderr  ctor_string_literal.rs  ctor_string_literal.stderr  deps_not_array.rs  deps_not_array.stderr  duplicate_lifecycle.rs  duplicate_lifecycle.stderr  duplicate_name.rs  duplicate_name.stderr  generate_clients_multiple_params.rs  generate_clients_multiple_params.stderr  generate_clients_mut_self.rs  generate_clients_mut_self.stderr  generate_clients_no_options.rs  generate_clients_no_options.stderr  generate_clients_no_self_receiver.rs  generate_clients_no_self_receiver.stderr  generate_clients_non_result_return.rs  generate_clients_non_result_return.stderr  generate_clients_not_async.rs  generate_clients_not_async.stderr  lifecycle_await_ready_wrong_type.rs  lifecycle_await_ready_wrong_type.stderr  lifecycle_entry_not_found.rs  lifecycle_entry_not_found.stderr  lifecycle_missing_args.rs  lifecycle_missing_args.stderr  lifecycle_runner_not_async.rs  lifecycle_runner_not_async.stderr  lifecycle_unknown_arg.rs  lifecycle_unknown_arg.stderr  lifecycle_wrong_third_param.rs  lifecycle_wrong_third_param.stderr  missing_name.rs  missing_name.stderr  unknown_capability.rs  unknown_capability.stderr  (+2 more)
libs/modkit-macros/tests/ui/pass/: stateful_ok.rs  stateful_ready_ok.rs
libs/modkit-oop-bootstrap/: Cargo.toml
libs/modkit-oop-bootstrap/src/: lib.rs
libs/modkit-security/: Cargo.toml
libs/modkit-security/src/: bin_codec.rs  lib.rs
libs/modkit-security/tests/: bin_codec.rs
libs/modkit-transport-grpc/: Cargo.toml  build.rs
libs/modkit-transport-grpc/proto/: restinvoke.proto
libs/modkit-transport-grpc/src/: lib.rs
libs/modkit/macros/src/: lib.rs
libs/modkit/src/: contracts.rs  directory.rs  lib.rs  registry.rs  tests.rs
libs/modkit/src/api/: operation_builder.rs
libs/modkit/src/runtime/: backend.rs  grpc_installers.rs  host_runtime.rs  instance_directory.rs  mod.rs  module_manager.rs  runner.rs  system_context.rs
libs/modkit/src/runtime/backends/: local.rs  mod.rs
libs/modkit/src/telemetry/: init.rs
libs/modkit/tests/: macro_tests.rs
modules/api_ingress/src/: lib.rs
modules/api_ingress/src/middleware/: mime_validation.rs  mod.rs  rate_limit.rs
modules/directory_service/: Cargo.toml  build.rs
modules/directory_service/proto/: directory.proto
modules/directory_service/src/: client.rs  config.rs  grpc_client.rs  lib.rs  server.rs
modules/file_parser/: Cargo.toml
modules/file_parser/src/: config.rs  lib.rs  module.rs
modules/file_parser/src/api/rest/: dto.rs  error.rs  handlers.rs  mod.rs  routes.rs
modules/file_parser/src/domain/: error.rs  ir.rs  markdown.rs  mod.rs  parser.rs  service.rs
modules/file_parser/src/domain/parsers/: docx_parser.rs  html_parser.rs  mod.rs  pdf_parser.rs  plain_text.rs  stub.rs
modules/grpc_hub/: Cargo.toml
modules/grpc_hub/src/: lib.rs
proto/directory/v1/: directory.proto
