[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["Hypernetix"]
repository = "https://github.com/hypernetix/hyperspot"
description = "HyperSpot Server"

[workspace]
members = [
    "apps/hyperspot-server",
    "libs/modkit-bootstrap",
    "libs/modkit",
    "libs/modkit-macros",
    "libs/modkit-db",
    "libs/modkit-db-macros",
    "libs/modkit-auth",
    "libs/modkit-security",
    "libs/modkit-errors",
    "libs/modkit-errors-macro",
    "libs/modkit-odata",
    "libs/modkit-transport-grpc",
    "modules/api_ingress",
    "modules/directory_service",
    "modules/grpc_hub",
    "examples/modkit/users_info"
]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "deny"
unused_mut = "warn"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async runtime
tokio = { version = "1.47", features = ["full"] }
async-trait = "0.1"

# High-performance data structures
dashmap = "6.1"
arc-swap = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time", "local-time"] }
tracing-log = "0.2"

# Web framework (only for api_ingress)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id", "cors", "limit", "util", "timeout"] }
uuid = { version = "1.7", features = ["v4", "serde"] }

# OpenAPI documentation (only for api_ingress)
utoipa = { version = "5", features = ["macros", "openapi_extensions", "chrono", "uuid"] }

# Synchronous locks for better performance
parking_lot = "0.12"

# CLI support
clap = { version = "4.5", features = ["derive"] }

# Database (only for db module)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "any", "migrate"] }

# File rotation for logging
file-rotate = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# DSN parsing
dsn = "1.1.1"
humantime-serde = "1.1"

# URL parsing
url = "2.5"
urlencoding = "2.1"

# Regex for env expansion
regex = "1.10"
