[package]
name = "hyperspot-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
users-info-example = ["dep:users_info"]
otel = ["modkit/otel", "modkit-bootstrap/otel"]

[[bin]]
name = "hyperspot-server"
path = "src/main.rs"

[dependencies]
mimalloc = { version = "0.1" }
# Local crates
modkit-bootstrap = { path = "../../libs/modkit-bootstrap" }
modkit = { path = "../../libs/modkit", features = ["otel"] }
modkit-db = { path = "../../libs/modkit-db", features = ["sqlite"] }

# System modules
api_ingress = { path = "../../modules/api_ingress" }
grpc_hub = { path = "../../modules/grpc_hub" }
directory_service = { path = "../../modules/directory_service" }

# user modules
file_parser = { path = "../../modules/file_parser" }

anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
figment = { version = "0.10", features = ["yaml", "env"] }

# SQLx for driver registration workaround
sqlx = { workspace = true, features = ["postgres", "sqlite"] }

# Optional example module
users_info = { path = "../../examples/modkit/users_info", optional = true }

[dev-dependencies]
tempfile = "3"
