[package]
name = "modkit-bootstrap"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
otel = ["tracing-opentelemetry", "tracing-error", "opentelemetry_sdk"]

[lib]
name = "modkit_bootstrap"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }
file-rotate = { workspace = true }
figment = { version = "0.10", features = ["yaml", "env"] }
serde_json = { workspace = true }
tempfile = "3.21"
tokio = { workspace = true }
chrono = { workspace = true }
thiserror = "2.0"
dsn = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
regex = { workspace = true }
modkit-db = { path = "../modkit-db" }

# OpenTelemetry support (optional)
tracing-opentelemetry = { version = "0.32.0", optional = true }
tracing-error = { version = "0.2", optional = true }
tracing-appender = "0.2"
opentelemetry_sdk = { version = "0.31", features = ["trace", "rt-tokio"], optional = true }
