[package]
name = "modkit-security"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
uuid = { version = "1.7", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"], optional = true }
bincode = { version = "2.0", features = ["serde"] }
thiserror = { version = "2.0" }

