[package]
name = "modkit-transport-grpc"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
build = "build.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
async-trait = "0.1"
bytes = "1"
thiserror = "1"
modkit-security = { path = "../modkit-security", features = ["serde"] }

[build-dependencies]
tonic-build = "0.11"

