[package]
name = "modkit"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "modkit"

[features]
# Enable the runner and the runtime integration by default.
default = ["otel"]

# OpenTelemetry support for distributed tracing
otel = ["opentelemetry", "opentelemetry_sdk", "tracing-opentelemetry", "tracing-subscriber", "opentelemetry-otlp", "tonic"]

[dependencies]
# Project-local crates
modkit-bootstrap = { path = "../modkit-bootstrap" }
modkit-macros = { path = "../modkit-macros" }
modkit-errors = { path = "../modkit-errors", features = ["utoipa", "axum"] }
modkit-errors-macro = { path = "../modkit-errors-macro" }
modkit-db = { path = "../modkit-db" }
modkit-odata = { path = "../modkit-odata", features = ["with-odata-params"] }

# Core deps
anyhow = { workspace = true }
async-trait = { workspace = true }
inventory = "0.3"
tracing = { workspace = true }
figment = "0.10"

tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

# Router/types used in contracts and runtime
axum = { workspace = true }
http = "1.3"

# OpenAPI/serde
utoipa = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = { workspace = true }

# Performance / lock-free structures
parking_lot = "0.12"
dashmap = { workspace = true }
thiserror = "2.0"
odata-params = "0.4"

# For filter hashing
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4", "v7", "fast-rng"] }
urlencoding = "2.1"

# HTTP client for traced requests
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Basic tracing support
tracing-error = "0.2"
rand = "0.9.2"

# OpenTelemetry tracing support (optional) - full implementation
opentelemetry = { version = "0.31", features = ["trace"], optional = true }
opentelemetry_sdk = { version = "0.31", features = ["trace", "rt-tokio"], optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "http-proto"], optional = true }

# gRPC support only for otel (optional)
tonic = { version = "0.14", optional = true }

# Additional dependencies for telemetry features
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
hyper = "1.3"
tower = "0.5"
trybuild = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
httpmock = "0.8.0"


