[package]
name = "directory_service"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
parking_lot = "0.12"
modkit = { path = "../../libs/modkit" }
modkit-transport-grpc = { path = "../../libs/modkit-transport-grpc" }
tokio = { workspace = true }
tokio-util = "0.7"
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
async-trait = { workspace = true }
anyhow = { workspace = true }
tokio-stream = "0.1"
tracing = { workspace = true }
serde = { workspace = true }
inventory = "0.3"

[build-dependencies]
tonic-build = "0.12"

