[package]
name = "directory_service"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
parking_lot = "0.12"
modkit = { path = "../../libs/modkit" }
modkit-transport-grpc = { path = "../../libs/modkit-transport-grpc" }
tokio = { workspace = true }
tokio-util = "0.7"
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"
prost = { version = "0.14" }
async-trait = { workspace = true }
anyhow = { workspace = true }
tokio-stream = "0.1"
tracing = { workspace = true }
serde = { workspace = true }
inventory = "0.3"

[build-dependencies]
tonic-prost-build = "0.14"

