[package]
name = "directory_service"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
parking_lot = "0.12"
modkit = { path = "../../libs/modkit" }
modkit-transport-grpc = { path = "../../libs/modkit-transport-grpc" }
directory-grpc-stubs = { path = "../../grpc-stubs/directory-grpc-stubs" }
tokio = { workspace = true }
tonic = { version = "0.14", features = ["transport"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
inventory = "0.3"

