[package]
name = "file_parser"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Core dependencies
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1"
inventory = "0.3"

# Serde and JSON schema
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { workspace = true }

# HTTP and REST
axum = { workspace = true, features = ["macros", "multipart"] }
tower-http = { version = "0.6" }
http = "1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# URL parsing and HTTP client
url = "2.5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# UUID support
uuid = { version = "1.18", features = ["v4", "v7", "serde"] }

# Lock-free atomic swaps
arc-swap = "1.7"

# Error handling
thiserror = "2.0"

# Bytes handling
bytes = "1.5"

# Base64 encoding (used by stub parser)
base64 = "0.22"

# Temp file handling
tempfile = "3"

# Document parsing libraries
tl = "0.7"
# Note: ferrules requires a lib target; using pdf-extract as alternative for now
# ferrules = { git = "https://github.com/aminediro/ferrules.git", default-features = false }
pdf-extract = "0.7"
docx-rs = "0.4"

# MIME type parsing
mime = "0.3"

# Local dependencies
modkit = { path = "../../libs/modkit" }
modkit-auth = { path = "../../libs/modkit-auth" }
modkit-security = { path = "../../libs/modkit-security" }
modkit-errors = { path = "../../libs/modkit-errors" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
api_ingress = { path = "../../modules/api_ingress" }
tokio-test = "0.4"

